backend/vulnerability_analysis/testing/oob1/segments/klee-out-1/test000024.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strlen.c
Line: 22
assembly.ll line: 9679
State: 2
Stack: 
	#000009679 in strlen(138987964465152) at libc/string/strlen.c:22
	#100007921 in update_employee(138976153305088, symbolic) at testing/oob2/segments/segment_2_klee.c:24
	#200008212 in __klee_posix_wrapped_main() at testing/oob2/segments/segment_2_klee.c:41
	#300006090 in __user_main(1, 140191092178944, 140191092178960) at src/runtime/POSIX/klee_init_env.c:245
	#400000544 in __uClibc_main(140175313207296, 1, 140191092178944, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000709 in main(1, 140191092178944)
Info: 
	address: 138987964465252
	next: object at 138945551663104 of size 4
		MO7616[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
